--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.0",
-    "next": "^15.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@vercel/analytics": "1.6.1",
+    "next": "15.5.7",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
